--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fa775aa448.js" crossorigin="anonymous"></script>
     <title>Plantes & Arbres</title>
+    <meta name="description" content="Planter des arbres et des plantes est le meilleur don à la Terre que vous puissiez faire">
 </head>
 <body>
 <header id="header">
